--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8'
-
 services:
   emailanalyser:
     build: .
+    # Map host port (override with HOST_API_PORT env var, default 5000)
     ports:
-      - "5000:5000"
+      - "${HOST_API_PORT:-5000}:5000"
     environment:
       - API_PORT=5000
       - OUTPUT_DIR=/app/email_analysis_output
